k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: medconnect
  labels:
    name: medconnect
    app.kubernetes.io/name: medconnect
