k8s/14-mailhog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailhog
  namespace: medconnect
  labels:
    app.kubernetes.io/name: medconnect
    app.kubernetes.io/component: mailhog
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: medconnect
      app.kubernetes.io/component: mailhog
  template:
    metadata:
      labels:
        app.kubernetes.io/name: medconnect
        app.kubernetes.io/component: mailhog
    spec:
      containers:
        - name: mailhog
          image: axllent/mailpit:latest # mailhog/mailhog:v1.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: smtp
              containerPort: 1025
              protocol: TCP
            - name: http
              containerPort: 8025
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: mailhog
  namespace: medconnect
  labels:
    app.kubernetes.io/name: medconnect
    app.kubernetes.io/component: mailhog
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: medconnect
    app.kubernetes.io/component: mailhog
  ports:
    - name: smtp
      protocol: TCP
      port: 1025
      targetPort: smtp
    - name: http
      protocol: TCP
      port: 8025
      targetPort: http
